remaster extra 18 guia 4

--- a/4-guia/ejercicios-4-extra/ej-extra-18-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-18-4.tex
@@ -11,13 +11,18 @@
 
 A lo largo de este ejercicio mucho de lo que voy a usar son esas frases del secundario:
 
-\begin{center}
-  \textit{El máximo común divisor entre 2 números son los factores
-    (de la factorización en primos) comunes elevados al menor exponente}.\par
-  \textit{El mínimo común múltiplo entre 2 números son los factores
+\parrafoDestacado{
+  \textit{El \ul{máximo común divisor} entre 2 números son los factores
+    (de la factorización en primos) comunes elevados al menor exponente}.
+
+  \medskip
+
+  \textit{El \ul{mínimo común múltiplo} entre 2 números son los factores
     (de la factorización en primos) comunes y los \underline{no} comunes elevados al mayor exponente.
   }
-\end{center}
+}
+
+\bigskip
 
 Del enunciado se deduce que:
 $$
@@ -70,10 +75,12 @@ $$
   \end{array}
 $$
 
-\textit{Nota que puede ser relevante:}\par
-Suponiendo que lo que hice está bien, $a \cdot b = (a:b) \cdot [a:b]$, tiene que valer, pero acordate que
-en el enunciado metieron un \red{5} ahí que no está ni en $a$ ni en $b$, ojo con eso.\par
-\textit{Fin de nota que puede ser relevante:}\par
+\parrafoDestacado[{\small{\atencion}}]{
+  \textit{Nota que puede ser relevante:}\par
+  Suponiendo que lo que hice está bien, $a \cdot b = (a:b) \cdot [a:b]$, tiene que valer, pero acordate que
+  en el enunciado metieron un \red{5} ahí que no está ni en $a$ ni en $b$, ojo con eso.\par
+  \textit{Fin de nota que puede ser relevante:}
+}
 
 \begin{aportes}
   \item \aporte{\dirRepo}{naD GarRaz \github}
