--- a/4-guia/ejercicios-4/ej-18-4.tex
+++ b/4-guia/ejercicios-4/ej-18-4.tex
@@ -1,13 +1,10 @@
-\textit{\underline{Máximo común divisor:}}
+\begin{enunciado}{\ejercicio}
+  En cada uno de los siguientes casos calcular el máximo común divisor entre $a$ y $b$ y escribirlo como combinación lineal entera de $a$ y $b$:
+  \begin{enumerate}[label=\roman*)]
+    \item $a = 2532,\ b = 63$.
+    \item $a = 131,\ b = 23$.
+    \item $a = n^4 - 3,\ b = n^2 + 2\ (n \en \naturales)$.
+  \end{enumerate}
+\end{enunciado}
 
-\ejercicio
-En cada uno de los siguientes casos calcular el máximo común divisor entre $a$ y $b$ y escribirlo como combinación lineal entera de $a$ y $b$:
-\begin{enumerate}[label=\roman*)]
-	\item $a = 2532,\ b = 63$.
-	\item $a = 131,\ b = 23$.
-	\item $a = n^4 - 3,\ b = n^2 + 2\ (n \en \naturales)$.
-\end{enumerate}
-
-\separadorCorto
-
-\Hacer
+\hacer
