--- a/3-guia/ejercicios-3-extra/ej-extra-1-3.tex
+++ b/3-guia/ejercicios-3-extra/ej-extra-1-3.tex
@@ -1,52 +1,106 @@
 \begin{enunciado}{\ejExtra}
-Sea $\relacion \subseteq \partes(\naturales) \times \partes(\naturales)$ la relación de equivalencia
-$\to X \relacion Y \sisolosi X \triangle Y \subseteq \set{4,5,6,7,8}$.\\
-¿Cuántos conjuntos hay en la clase de equivalencia de $X = \set{x \en \naturales : x \geq 6}$?
+  Sea $\relacion \subseteq \partes(\naturales) \times \partes(\naturales)$ la relación de equivalencia
+  $$
+    X \relacion Y \sisolosi X \triangle Y \subseteq \set{4,5,6,7,8}.
+  $$
+  ¿Cuántos conjuntos hay en la clase de equivalencia de $X = \set{x \en \naturales : x \geq 6}$?
 
 \end{enunciado}
 
+Bajo el enunciado a:
 \begin{enumerate}
-	\item La relación toma valores de $\partes(\naturales)$
+  \item La relación toma valores de $\partes(\naturales)$
 
-	\item Los elementos del conjunto $\relacion \subseteq \partes(\naturales) \times \partes(\naturales)$
+  \item Los elementos del conjunto $\relacion \subseteq \partes(\naturales) \times \partes(\naturales)$
 
-	\item El conjunto $X = \set{\foreach \i in {6,...,10}{\i, }\dots}$ es simplemente un elemento de $\partes(\naturales)$.
-	      Los conjuntos $Y \in \partes(\naturales)$ tales que $X \relacion Y$ van a ser los conjuntos que junto a $X$ formarán la
-	      clase de equivalencia.\\
-	      $ \overline{X} = \set{Y \in \partes{\naturales} : X \relacion Y}$
+  \item El conjunto
+        $$
+          X = \set{\foreach \i in {6,...,10}{\i, }\dots}
+        $$
+        es simplemente un elemento de $\partes(\naturales)$. Los conjuntos $Y \en \partes(\naturales)$ tales que $X \relacion Y$
+        van a ser los conjuntos que junto a $X$ formarán la clase de equivalencia.
+
+        $ \clase{X} = \set{Y \en \partes(\naturales) : X \relacion Y}$
 \end{enumerate}
 
 Para tener una relación de equivalencia deben cumplirse:
 \begin{itemize}
-	\item Reflexividad. $X \triangle X = \vacio \stackrel{\checkmark}\subseteq \set{4,5,6,7,8}$
-	\item Simetría. $X \triangle Y \igual{\checkmark} Y \triangle X,\, \paratodo X,Y \in \partes(\naturales)$
-	\item Transitividad.
+  \item \textit{Reflexividad:}
+        $$
+          X \triangle X = \vacio \stackrel{\checkmark}\subseteq \set{4,5,6,7,8}
+        $$
+
+  \item \textit{Simetría:}
+        $$
+          X \triangle Y \igual{\checkmark} Y \triangle X,\, \paratodo X,Y \in \partes(\naturales)
+        $$
+  \item \textit{Transitividad:}
+
+        \hacer
 \end{itemize}
 
-Condiciones que debería cumplir un elemeto $Y$ para pertenecer a la la clase de equivalencia, en otras palabras estar relacionado con $X$:\\
-Los elementos $\to$\\
-$\llaves{l}{
-		1, 2, 3 \text{ no deben pertenecer a } Y \flecha{por}[ejemplo]
-		\llave{l}{
-			X \triangle \underbrace{\set{3,8,9,\dots}}_Y = \set{3,6,7} \cancel{\subseteq} \set{4,5,6,7,8}\\
-			X \triangle \underbrace{\set{1,2,3}}_Y = \set{1,2,3,6,7,\dots} \cancel{\subseteq} \set{4,5,6,7,8}\\
-		}\\ \hline
+Nos piden que encontremos la cantidad de conjuntos que hay en la clase de equivalencia de $X$, eso
+es lo mismo que buscar el cardinal del conjunto.
 
-		4,5,6,7,8 \text{ pueden o no pertenecer a } Y \flecha{por}[ejemplo]
-		\llave{l}{
-			X \triangle \underbrace{\set{4,6,8,9,\dots}}_Y = \set{4,7} \stackrel{\checkmark}\subseteq \set{4,5,6,7,8}\\
-			X \triangle \underbrace{\set{9,\dots}}_Y = \set{6,7,8} \stackrel{\checkmark}\subseteq \set{4,5,6,7,8}
-		}\\ \hline
+Las clases son conjuntos formados por los pares $X \relacion Y$. Entonces tenemos que pensar ¿Cómo es que tiene que
+ser un conjunto $Y$ para relacionarse con $X$?
 
-		9,10, \dots \text{ deben pertenecer a } Y \flecha{por}[ejemplo]
-		\llave{l}{
-			X \triangle \underbrace{\set{6,7,8}}_Y = \set{9,10,\dots} \cancel\subseteq \set{4,5,6,7,8}\\
-			X \triangle \underbrace{\set{10,\dots}}_Y = \set{9} \cancel\subseteq \set{4,5,6,7,8}\\
-			X \triangle \underbrace{\set{9,\dots}}_Y = \set{6,7,8} \stackrel{\checkmark}\subseteq \set{4,5,6,7,8}
-		}
-	}$
+\bigskip
 
-Se concluye que la clase de equivalencia será el conjunto $\overline{X}$ (\red{notación inventada}):\\
-$\overline{X} = \set{ Y_1  \union \set{9,10,\dots}, Y_2  \union \set{9,10,\dots}, \dots, Y_{32}  \union \set{9,10,\dots}}$
-con
-$Y_i \en \partes(\set{4,5,6,7,8})\; i \in [1,2^5] $ donde $\#\overline{X} = 2^5$\\
+Para esto me gusta pensar a la diferencia simétrica como: \textit{El conjunto formado por los elementos no comunes de los conjuntos:}.
+Este conjunto:
+$$
+  X \triangle Y  \subseteq \set{4,5,6,7,8}
+$$
+
+El conjunto $Y$ \ul{no puede tener} los elementos, 1, 2 y 3, porque \textit{rompo la relación}. Por otro lado $Y$ \ul{debe tener}
+los elementos en $\set{n \en \naturales : n \geq 9}$, de manera de \textit{cancelar} todos esos valores de $X$, de
+forma que $X \relacion Y \subseteq \set{4,5,6,7,8}$ y no tenga valores superiores a 8.
+
+Se concluye que la clase de equivalencia será el conjunto, {\tiny(en \red{notación inventada})}:
+$$
+  \clase{X}  =
+  \bigg\{
+  \ub{
+    Y_1  \union \set{9,10,\dots}
+  }{
+    \clase{X}_1
+  },
+  \ub{
+    Y_2  \union \set{9,10,\dots}
+  }{
+    \clase{X}_2
+  },
+  \dots,
+  \ub{
+    Y_{32}  \union \set{9,10,\dots}
+  }{
+    \clase{X}_{32}
+  }
+  \bigg\}
+  \quad
+  \text{donde } \#\overline{X} = 2^5 = 32
+$$
+con los conjuntos:
+$$
+  Y_i \en \partes(\set{4,5,6,7,8})\ \text{ con } i \en [1, 32]
+$$
+
+En palabras:
+\parrafoDestacado{
+  Todos los $\clase{X}_i$ tienen el $\set{9,10,\ldots}$ así que a la hora de contar, esa parte \ul{no aporta nada}, porque
+  es igual en tooooodos los conjuntos $\clase{X}_i$
+
+  La papa está en armar todos los subconjuntos que pueda con los elementos $\set{4,5,6,7,8}$, los $Y_i$.
+  Eso es equivalente a construir:
+  $$
+    \partes(\set{4,5,6,7,8}),
+  $$
+  que por definición es el conjunto con todos los subconjuntos de $\set{4,5,6,7,8}$.
+
+  La cantidad de elementos de un conjunto $\partes(A)$ es $\#\partes(A) = 2^{\#A}$
+}
+
+\begin{aportes}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
