--- a/2-guia/ejercicios-2/ej-22-2.tex
+++ b/2-guia/ejercicios-2/ej-22-2.tex
@@ -1,78 +1,111 @@
 \begin{enunciado}{\ejercicio}
   Probar que todo número natural $n$ se escribe como suma de distintas potencias de 2, incluyendo $2^0 = 1$.
 \end{enunciado}
-Probemos que todo número natural $n$ se escribe como suma de distintas potencias de 2 usando inducción
-\begin{align*}
-  P(n): n = \sumatoria{i=1}{r}  2^{\alpha_i},\, 0 \leq \alpha_1 < \alpha_2 < \cdots < \alpha_r,\, n \en \naturales
-\end{align*}
-\underline{Caso Base}, $n = 1$:
-\begin{align*}
-  P(1): 1 = 2^0 \Entonces{Obs} P(1):V
-\end{align*}
-\underline{Paso inductivo}. Sean $n,k \en \naturales $, donde $1 \leq k \leq n$:
-\begin{enumerate}
-  \item[HI.] $P(n):V,\, \paratodo k$
-  \item[TI.] $P(n+1): n + 1 = \displaystyle \sumatoria{i=1}{s}  2^{\beta_i},\,
-          0 \leq \beta_1 < \beta_2 < \cdots < \beta_k$
-\end{enumerate}
-Desarrollemos el lado izquierdo de la igualdad en la TI. Para ello analizemos el caso donde $n$ es par y otro donde es impar.\\
-Caso $n$ impar: \\
-Si $n$ impar esto implica que $n+1$ es par. Podemos escribir a $n+1$ como $n + 1 = 2h,\, h \en \naturales $
-\begin{align*}
-  h \overset{\text{Aux.1}}{\leq} n \overset{\text{HI}} & {\entonces}
-  h = \sumatoria{i=1}{r} 2^{\alpha_i} \entonces 2h = 2 \sumatoria{i=1}{r} 2^{\alpha_i}
-  \entonces 2h = \sumatoria{i=1}{r} 2 \cdot 2^{\alpha_i} \entonces 2h = \sumatoria{i=1}{r} 2^{\alpha_i + 1}         \\
-  \overset{2h = n+1}                                   & {\entonces} n + 1 = \sumatoria{i=1}{r} 2^{\alpha_i + 1},\,
-  1 \leq \alpha_1+1 < \alpha_2+1 < \cdots < \alpha_r+1                                                              \\
-  \overset{\text{Obs}}                                 & {\entonces} P(n+1):V,\, n \text{ impar}
-\end{align*}
-Caso $n$ par: \\
-Si $n$ par esto implica que $n+1$ es impar. Podemos escribir a $n+1$ como $n + 1 = 2h + 1,\, h \en \naturales $
-\begin{align*}
-  h \overset{\text{Aux.2}}{\leq} n \overset{\text{HI}} & {\entonces}
-  h = \sumatoria{i=1}{r} 2^{\alpha_i} \entonces 2h = 2 \sumatoria{i=1}{r} 2^{\alpha_i}
-  \entonces 2h = \sumatoria{i=1}{r} 2 \cdot 2^{\alpha_i} \entonces 2h = \sumatoria{i=1}{r} 2^{\alpha_i + 1}               \\
-                                                       & \entonces 1 + 2h = 1 + \sumatoria{i=1}{r} 2^{\alpha_i + 1}
-  \entonces 2h + 1 = 2^0 + \sumatoria{i=1}{r} 2^{\alpha_i + 1}                                                            \\
-  \overset{2h+1 = n+1}                                 & {\entonces} n + 1 = 2^0 + \sumatoria{i=1}{r} 2^{\alpha_i + 1},\,
-  1 \leq \alpha_1+1 < \alpha_2+1 < \cdots < \alpha_r+1                                                                    \\
-  \overset{\text{Obs}}                                 & {\entonces} P(n+1):V,\, n \text{ impar}
-\end{align*}
-Por lo tanto, $P(n+1):V$ para cualquier $n$ natural. Hemos probado el caso base y el paso inductivo. Concluimos que $P(n):V,$ $\paratodo n \en \naturales $.
+Este ejercicio es probar que que un número puede escribirse en \textit{binario}, onda:
+$$
+  27 = (\blue{11011})_2 = \blue{1} \cdot 2^4 + \blue{1} \cdot 2^3 + \blue{0} \cdot 2^2 + \blue{1} \cdot 2^1 + \blue{1} \cdot 2^0
+$$
+Probemos que todo número natural $n$ se escribe como suma de distintas potencias de 2 usando inducción:
+$$
+  p(n): n = \sumatoria{i = 1}{r}
+  2^{\alpha_i},\,  \text{donde } \alpha_i \en \naturales_0 \text{ y si } \alpha_i \distinto 0 \entonces \alpha_i \distinto \alpha_j  \text{ si } i \distinto j
+$$
 
-\paragraph{Auxiliar 1}{
-  Acotemos $h$
-  \begin{align*}
-    2h = n + 1 \entonces h = \frac{n+1}{2} \entonces h = \frac{n+1}{2} \leq \frac{2n}{2} \entonces h \leq n
-  \end{align*}
-}
-\paragraph{Auxiliar 1}{
-  Acotemos $h$
-  \begin{align*}
-    2h + 1 = n + 1 \entonces h = \frac{n}{2} \entonces h = \frac{n}{2} \leq n \entonces h \leq n
-  \end{align*}
+\textit{Caso Base:}
+$$
+  p(\blue{1}): \blue{1} = 2^0
+$$
+por lo que $p(1)$ resulta verdadera
+
+\textit{Paso inductivo}:
+
+Asumo que para un $\blue{k} \en \naturales$ la proposición:
+$$
+  p(\blue{k}):
+  \ub{
+    \blue{k} = \sumatoria{i = 1}{r}
+    2^{\alpha_i}
+    ,\,  \text{donde } \blue{k} \ytext \alpha_i \en \naturales \ytext \alpha_i \distinto \alpha_j  \text{ si } i \distinto j
+  }{
+    \text{\purple{hipótesis inductiva}}
+  }
+$$
+es verdadera. Entonces quiero probar que:
+$$
+  p(\blue{k+1}):
+  \blue{k+1} =
+  \sumatoria{i = 1}{\magenta{s}}
+  2^{\alpha_i}
+  ,\,  \text{donde } \alpha_i \en \naturales \ytext \alpha_i \distinto \alpha_j  \text{ si } i \distinto j
+  \text{ con } \blue{k} \ytext \alpha_i \en \naturales
+$$
+también lo sea.
+
+La hipótesis inductiva para un $\blue{k}$:
+$$
+  \begin{array}{rcl}
+    \blue{k} =
+    \sumatoria{i = 1}{\red{r}} 2^{\alpha_i}
+     & = &
+    2^0 + 2^1 + 2^2 +
+    \cdots +
+    2^{h-1} + 2^{h+1} +
+    \cdots +
+    2^{r-1} + 2^r \\
+  \end{array}
+$$
+Sumándole 1:
+$$
+  \begin{array}{rcl}
+    \blue{k + 1} =
+    \blue{1} +
+    \sumatoria{i = 1}{\red{r}} 2^{\alpha_i}
+     & =               &
+    \blue{1} +
+    \ub{
+      2^0 + 2^1 + 2^2 +
+      \cdots +
+      2^{\magenta{h-2}}+
+      2^{\magenta{h-1}}
+    }{
+    \text{potencias con} \\ \text{exponentes consecutivos}
+    }
+    + 2^{\magenta{h+1}} +
+    \cdots +
+    2^{r-1} + 2^r        \\
+     & \igual{\red{!}} &
+    2^{\magenta{h}} + 2^{\magenta{h+1}} +
+    \cdots +
+    2^{r-1} + 2^r        \\
+  \end{array}
+$$
+$p(\blue{k+1})$ resultó verdadera. Si la cuenta de recién quedó oscura, lo que pasó fue algo así como
+$2^\alpha + 2^\alpha = 2^{\alpha+1}$, ejemplo:
+$$
+  \ub{1 + 2^0}{=2} + 2^1 + 2^2 + 2^3
+  =
+  \ub{2 + 2^1}{=2^2} + 2^2 + 2^3
+  =
+  \ub{2^2 + 2^2}{=2^3} + 2^3
+  =
+  \ub{2^3 + 2^3}{=2^4}
+  = 2^4
+$$
+En cierta forma al sumar "se hace un efecto dominó", en el cual las potencias de 2, con exponente no nulos, consecutivas
+\textit{desaparecen} formando la potencia con el siguiente exponente.
+El efecto termina con la \textit{aparición} cuando la sucesión de exponentes consecutivos termina.
+
+\parrafoDestacado{
+  Este \textit{efecto} es el acarreo de toda la vida de la suma, el acarreo es ese \texit{me llevo uno}
+  cuando sumás.
 }
 
-\paragraph{Observación}{
-  Aclaraciones sobre el uso de las preposiciones $P(n)$ y $P(n+1)$
-  \begin{itemize}
-    \item El caso base nos queda verdadero porque encontramos una forma de escribir a 1 como una suma de potencias
-          de 2, en este caso la sumatoria solo posee un término que es $2^0$. En nuestra proposición $P(n)$ aparecen $r$
-          y los $\alpha_i$ (exponentes de 2). Para nuestro caso base, tenemos que $r = 1$ y $\alpha_1 = 0$.
-    \item En el paso inductivo, caso $n$ impar, llegamos a escribir $n+1$ como suma de potencias de 2, lo cual
-          hace que $P(n+1)$ sea verdadera. Otra forma de verlo, es que encontramos los $\beta_i$ mencionados en la TI.
-          Basta tomar $\beta_i = \alpha_i + 1$, con $i = 1, \cdots , r$, con lo cual $s = r$. Estos $\beta_i$ son válidos
-          pues se deducen de la HI.
-    \item En el paso inductivo, caso $n$ par, llegamos a escribir $n+1$ como suma de potencias de 2, lo cual
-          hace que $P(n+1)$ sea verdadera. Otra forma de verlo, es que encontramos los $\beta_i$ mencionados en la TI.
-          Basta tomar $\beta_1 = 0$ y $\beta_{i+1} = \alpha_i + 1$, con $i = 1, \cdots , r$, con lo cual $s = r + 1$.
-          Estos $\beta_{i+1}$ son válidos pues se deducen de la HI.
-  \end{itemize}
-}
+\bigskip
 
-% Contribuciones
+Finalmente $p(1), p(k) \ytext p(k+1)$ resultaron verdaderas y por el principio de inducción
+$p(n)$ es verdadera $\paratodo n \en \naturales$
+
 \begin{aportes}
-  %% iconos : \github, \instagram, \tiktok, \linkedin
-  %\aporte{url}{nombre icono}
   \item \aporte{https://github.com/koopardo/}{Marcos Zea \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
 \end{aportes}
