--- a/4-guia/ejercicios-4-extra/ej-extra-22-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-22-4.tex
@@ -27,29 +27,29 @@ $$
   2^2 \cdot 3^4 \cdot 5.
 $$
 Tenemos que agregar entonces la combinación de primos que no rompan nada y que además generen un $n$ con 12 divisores,
-ya sea $7\alpha, 11^{\beta}, 13^{\gamma}, 17^{\delta}, \ldots$, peeeeero
+ya sea $7^{\blue{\alpha}}, 11^{\green{\beta}}, 13^{\magenta{\gamma}}, 17^{\violet{\delta}}, \ldots$, peeeeero
 para que la cantidad de dividores de $n$ sea 12 no puede haber más de 3 primos en la factorización,
 sino \ul{habría más de 3 divisores} (\hyperlink{teoria-4:cantidadDivisores}{Acá un poco de formulitas sobre esto \click}).
 
 Armo sistema con los 3 primos más chicos que puedo elegir:
 $$
   \llave{rcl}{
-    n & = & 3^{\yellow{1}} \cdot 7^\alpha \cdot 11^\beta\\
-    (\yellow{1} + 1) \cdot (\alpha + 1) \cdot (\beta + 1) & = &  12
+    n & = & 3^{\yellow{1}} \cdot 7^{\blue{\alpha}} \cdot 11^{\green{\beta}}\\
+    (\yellow{1} + 1) \cdot (\blue{\alpha} + 1) \cdot (\green{\beta} + 1) & = &  12
     \quad \sisolosi \quad
-    (\alpha + 1) \cdot (\beta + 1) = 6
+    (\blue{\alpha} + 1) \cdot (\green{\beta} + 1) = 6
   }
 $$
 Quedan solo 4 opciones:
 $$
   \llave{rcl}{
-    (\alpha,\beta) = (1,2) & \entonces & n = 3^{\yellow{1}} \cdot 7^1 \cdot 11^2  \quad\text{\tiny\faIcon[regular]{smile}}\\
-    (\alpha,\beta) = (2,1) & \entonces & n = 3^{\yellow{1}} \cdot 7^2 \cdot 11^1  \quad\text{\tiny\faIcon{skull}}\\
-    (\alpha,\beta) = (5,0) & \entonces & n = 3^{\yellow{1}} \cdot 7^0 \cdot 11^5  \quad\text{\tiny\faIcon{skull}}\\
-    (\alpha,\beta) = (0,5) & \entonces & n = 3^{\yellow{1}} \cdot 7^5 \cdot 11^0  \quad\text{\tiny\faIcon{skull}}
+    (\blue{\alpha},\green{\beta)} = (1,2) & \entonces & n = 3^{\yellow{1}} \cdot 7^{\blue{1}} \cdot 11^{\green{2}}  \quad\text{\tiny\faIcon[regular]{smile}}\\
+    (\blue{\alpha},\green{\beta)} = (2,1) & \entonces & n = 3^{\yellow{1}} \cdot 7^{\blue{2}} \cdot 11^{\green{1}}  \quad\text{\tiny\faIcon{skull}}\\
+    (\blue{\alpha},\green{\beta)} = (5,0) & \entonces & n = 3^{\yellow{1}} \cdot 7^{\blue{0}} \cdot 11^{\green{5}}  \quad\text{\tiny\faIcon{skull}}\\
+    (\blue{\alpha},\green{\beta)} = (0,5) & \entonces & n = 3^{\yellow{1}} \cdot 7^{\blue{5}} \cdot 11^{\green{0}}  \quad\text{\tiny\faIcon{skull}}
   }
 $$
-La combinación que da el menor $n$ es:
+La combinación que da \ul{el menor $n$} es:
 $$
   \cajaResultado{
     n = 3^1 \cdot 7^2 \cdot 11^1
