--- a/6-guia/ejercicios-6-extra/ej-extra-5-6.tex
+++ b/6-guia/ejercicios-6-extra/ej-extra-5-6.tex
@@ -27,6 +27,7 @@
         $$
         Entonces si $\arg(z) = \arg(-i)$:
         $$
+          \textstyle
           (\frac{a}{4}  +  \frac{b}{3} ) \pi = \frac{3}{2} \pi + \blue{2k\pi}
           \Sii{\red{!}}
           \cajaResultado{3a  +  4b = 18 + 24k}
@@ -70,12 +71,13 @@
         La solución general final con todos los pares queda:
         $$
           \begin{array}{rcl}
-            (a,b)_{general} & = & k\cdot (-4,3) +  (2,3)                     \\
-                            & = & (-4 + 2k, 3 + 3k) \paratodo k \en \enteros
+            (a,b)_{general} & = & \blue{\lambda}  \cdot (-4,3) +  (2,3)                                             \\
+                            & = & (-4\blue{\lambda} + 2, 3\blue{\lambda} + 3) \paratodo \blue{\lambda} \en \enteros
           \end{array}
         $$
 \end{enumerate}
 
 \begin{aportes}
-  \item \aporte{https://github.com/nad-garraz}{naD GarRaz \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+  \item \aporte{https://gitlab.com/bonditaker}{Valen S. \faIcon{gitlab}}
 \end{aportes}
