--- a/4-guia/ejercicios-4-extra/ej-extra-5-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-5-4.tex
@@ -1,62 +1,60 @@
 \begin{enunciado}{\ejExtra}
-	Determinar lso posibles valores de $d = (a^2 - 2a -5: a-1)$ para $a \en \enteros$. Exhibir un valor de $a$
-	correspondiente a cada uno de los valores de $d$ hallados.
+  Determinar los posibles valores de $d = (a^2 - 2a -5: a-1)$ para $a \en \enteros$. Exhibir un valor de $a$
+  correspondiente a cada uno de los valores de $d$ hallados.
 \end{enunciado}
 
-
 Parecido a cosas que ya se hicieron en otros ejercicios. Simplificamos si se puede con Euclides y después con tabla de restos
-filtramos los máximos común divisores que quedaron.\par \bigskip
+filtramos los máximos común divisores que quedaron.
+
+\bigskip
 
 \textit{Euclides con División de polinomios}
 $$
-	\divPol{X^2 - 2X -5}{X-1}
+  \divPol{X^2 - 2X -5}{X-1}
 $$
 
 Que en el resto quede un número es una excelente noticia, podemos reescribir al mcd:
 
 $$
-	d = (a^2 - 2a -5: a-1) = (a-1 : -6)
+  d = (a^2 - 2a -5: a-1) = (a-1 : -6)
 $$
 
 Con ese resultado y dado que $d  \divideA a - 1$ y también $d\divideA 6$:
 
 $$
-	d \en \set{1, 2, 3, 6}
+  d \en \set{1, 2, 3, 6}
 $$
-
 Tabla de restos para ver para que valores de $a$ se divide la expresión $a-1$
-
 $$
-	\begin{array}{|r|cc|}
-		\hline
-		r_2(a)     & 0 & 1           \\ \hline
-		r_2(a - 1) & 1 & \magenta{0} \\ \hline
-	\end{array}
-	\quad
-	\begin{array}{|r|ccc|}
-		\hline
-		r_3(a)     & 0 & 1           & 2 \\ \hline
-		r_3(a - 1) & 2 & \magenta{0} & 1 \\ \hline
-	\end{array}
-	\quad
-	\begin{array}{|r|cccccc|}
-		\hline
-		r_6(a)     & 0 & 1           & 2 & 3 & 4 & 5 \\ \hline
-		r_6(a - 1) & 5 & \magenta{0} & 1 & 2 & 3 & 4 \\ \hline
-	\end{array}
-$$\par
-
-Ahora hay que elegir un valor $a$ de forma tal que $d$ sea un valor que cumpla con los resultados.\par
+  \begin{array}{|r|cc|}
+    \hline
+    r_2(a)     & 0 & 1           \\ \hline
+    r_2(a - 1) & 1 & \magenta{0} \\ \hline
+  \end{array}
+  \quad
+  \begin{array}{|r|ccc|}
+    \hline
+    r_3(a)     & 0 & 1           & 2 \\ \hline
+    r_3(a - 1) & 2 & \magenta{0} & 1 \\ \hline
+  \end{array}
+  \quad
+  \begin{array}{|r|cccccc|}
+    \hline
+    r_6(a)     & 0 & 1           & 2 & 3 & 4 & 5 \\ \hline
+    r_6(a - 1) & 5 & \magenta{0} & 1 & 2 & 3 & 4 \\ \hline
+  \end{array}
+$$
+Ahora hay que elegir un valor $a$ de forma tal que $d$ sea un valor que cumpla con los resultados.
 
 Hay que tener cuidado, porque los conjuntos de $a$ que salen de la tabla de restos no son disjuntos.
 
 Los siguientes valores salen a ojímetro:
 $$
-	\begin{array}{c}
-		\text{si } a = 5 \entonces d = 2 \\
-		\text{si } a = 4 \entonces d = 3 \\
-		\text{si } a = 7 \entonces d = 6
-	\end{array}
+  \begin{array}{c}
+    \text{si } a = 5 \entonces d = 2 \\
+    \text{si } a = 4 \entonces d = 3 \\
+    \text{si } a = 7 \entonces d = 6
+  \end{array}
 $$
 
 \begin{aportes}
