fix extra 5 guia 6

--- a/6-guia/ejercicios-6-extra/ej-extra-5-6.tex
+++ b/6-guia/ejercicios-6-extra/ej-extra-5-6.tex
@@ -20,7 +20,7 @@
         $$
           \begin{array}{rcl}
             z & =               & \big(4\sqrt{2} + 4\sqrt{2}i\big)^a \big(8+8\sqrt{3}i\big)^b             \\
-              & =               & (4\sqrt{2} ( 1 + i ))^a \cdot (8(1 + \sqrt{3}))^b                       \\
+              & =               & (4\sqrt{2} ( 1 + i ))^a \cdot (8(1 + \sqrt{3}i))^b                       \\
               & =               & 8^a 16^b  e^{a \cdot \frac{\pi}{4} i} \cdot e^{b \cdot \frac{\pi}{3} i} \\
               & \igual{\red{!}} & 2^{3a + 4b} \cdot e^{i (\frac{a}{4}  +  \frac{b}{3} ) \pi}
           \end{array}
