--- a/2-guia/ejercicios-2/ej-22-2.tex
+++ b/2-guia/ejercicios-2/ej-22-2.tex
@@ -93,10 +93,11 @@ $$
 $$
 En cierta forma al sumar "se hace un efecto dominó", en el cual las potencias de 2, con exponente no nulos, consecutivas
 \textit{desaparecen} formando la potencia con el siguiente exponente.
-El efecto termina con la \textit{aparición} cuando la sucesión de exponentes consecutivos termina.
+El "efecto dominó" termina cuando la sucesión de exponentes consecutivos termina, apareciendo una potencia de 2 con el exponente siguiente
+al último de los consecutivos.
 
 \parrafoDestacado{
-  Este \textit{efecto} es el acarreo de toda la vida de la suma, el acarreo es ese \texit{me llevo uno}
+  Este \textit{efecto} es el acarreo de toda la vida de la suma, el acarreo es ese \textit{me llevo uno}
   cuando sumás.
 }
 
