--- a/4-guia/ejercicios-4-extra/ej-extra-7-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-7-4.tex
@@ -10,12 +10,11 @@ $$
   \Sii{$\times 2$}[$(\Leftarrow) 2 \cop 9$]
   \congruencia{a}{7}{9} \llamada1 \Tilde
 $$
-
-Simplifico la exprecion del MCD con euclides:\par
-\begin{center}
+Simplifico la expresión del MCD con euclides:
+$$
   \polyset{vars=a}
   \divPol{a^3+4a+1}{a^2 + 2}
-\end{center}
+$$
 
 Entonces puedo escribir:
 $$
