--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -18,8 +18,7 @@
 \DeclareMathOperator{\inter}{\cap}
 \DeclareMathOperator{\diferencia}{\ \setminus \ }
 \DeclareMathOperator{\y}{~\land~}
-\DeclareMathOperator{\o}{~\lor~}
-\DeclareMathOperator{\neg}{\sim}
+% \DeclareMathOperator{\neg}{\sim}
 
 \DeclareMathOperator{\equivalente}{\leftrightsquigarrow}
 \def\entonces{\implies}
