add extra 17 guia 7

--- a/7-guia/ejercicios-7-extra/ej-extra-16-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-16-7.tex
@@ -3,3 +3,5 @@
   y $g = 2x^3 - 4x^2 + 11/2x - 2$ no son coprimos. Factorizar a $f$ como producto de
   irreducibles en $\racionales[X]$, en $\reales[X]$ y en $\complejos[X]$.
 \end{enunciado}
+
+\hacer
