--- a/7-guia/ejercicios-7/ej-4-7.tex
+++ b/7-guia/ejercicios-7/ej-4-7.tex
@@ -1,6 +1,4 @@
-\begin{enunciado}{\ejercicio\labelEjercicio{ej:cong}}
-  % Etiqueta para referenciar el ejercicio
-
+\begin{enunciado}{\ejercicio}
   Hallar el cociente y el resto de la división de $f$ por $g$ en los casos
 
   \begin{enumerate}[label=\roman*)]
@@ -14,7 +12,6 @@
   \item $$
           \divPol{5X^4 + 2X^3 - X + 4}{X^2 + 2}
         $$
-
         Resultado válido para $\racionales[X],\,\reales[X],\,\complejos[X]$
 
   \item $$
