fix compilation errors

--- a/7-guia/ejercicios-7-extra/ej-extra-17-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-17-7.tex
@@ -1,5 +1,5 @@
 \begin{enunciado}{\ejExtra} \fechaEjercicio{final 04/03/24}
-  Hallar $a \en \enteros$ y $a \distinta 0$ de forma tal que el polinomio $f \en \complejos[x]$ dado por
+  Hallar $a \en \enteros$ y $a \distinto 0$ de forma tal que el polinomio $f \en \complejos[x]$ dado por
   $$
     f = x^5 - (4i -4)x^4 - (16i + 8)x^3 + (16i - 11)x^2 - (20i - 16)x - a
   $$
@@ -133,4 +133,5 @@ $$
 $$
 \begin{aportes}
   \item \aporte{\dirRepo}{naD GarRaz \github}
+  \item \aporte{https://www.gitlab.com/tizisf}{Tizi S. F. \gitlab}
 \end{aportes}
